@@ -314,6 +314,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13945) Retrieve cascading protection sources via inprop=protection
 * (bug 13965) Hardcoded 51 limit on titles is too limiting
 * (bug 13993) apfrom doesn't work with apdir=descending
+* (bug 14018) Introduced alcontinue to list=alllinks to improve paging
 
 === Languages updated in 1.13 ===
 
